[project]
name = "pin-poc-demo-frontend"
version = "0.1.0"
description = "PIN Intent Network POC Demo Frontend - Streamlit Dashboard"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "httpx>=0.25.0", 
    "pandas>=2.1.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamlit_ui"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]